sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:30: error: illegal start of simple expression
}while ()
        ^AlgCocktailSort3:33: error: ')' expected but '}' found.
}
^